Added a service generator for auto-start, refactored options and server config parsing, along with some tweaks to self-signed certs, and a few other minor improvements.